# Calculator

./: Cargo.toml  Dioxus.toml  README.md  dioxus.config.js  index.html
.github/: README.md
.github/workflows/: release.yml
assets/: styles.css
src/: app.rs  lib.rs  main.rs  style.css
src-tauri/: Cargo.toml  tauri.conf.json
