[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "calculator"
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = "0.5.0" # Using a specific version for consistency

[dependencies.dioxus-web]
version = "0.5.0" # Matching dioxus version

[dependencies.dioxus-mobile]
version = "0.5.0" # For mobile support
