[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "calculator"
path = "src/main.rs"

[lib]
name = "calculator"
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = "0.5.0" # Using a specific version for consistency

[target.'cfg(not(target_os = "android"))'.dependencies.dioxus-web]
version = "0.5.0" # Matching dioxus version

[target.'cfg(target_os = "android")'.dependencies.dioxus-mobile]
version = "0.5.0" # For mobile support

[package.metadata.android.signing.release]
path = "/tmp/release.keystore"
password = "android"
