[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "calculator"
path = "src/main.rs"

[lib]
name = "calculator"
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { version = "0.5.0", default-features = false } # Using a specific version for consistency

[target.'cfg(target_os = "android")'.dependencies.dioxus-mobile]
version = "0.5.0" # For mobile support

[target.'cfg(not(any(target_os = "android", target_family = "wasm")))'.dependencies.dioxus-desktop]
version = "0.5.0" # For desktop builds

[target.'cfg(target_family = "wasm")'.dependencies.dioxus-web]
version = "0.5.0" # For web builds

[package.metadata.android.signing.release]
path = "/tmp/release.keystore"
password = "android"
